Added subheader to Game projects
Also gave H2's a little underline. Perhaps these will become links for keyboard navigation? Time will tell. Also fixed some strange ancient space-based formatting in my css file.

--- a/games/index.html
+++ b/games/index.html
@@ -51,8 +51,10 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Forza Motorsport</h2>
 		<div class="project-div">
+			<h5>Turn 10 Studios | Sound Designer</h5>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">See you at the starting line!<br><br>Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vitae justo eget magna fermentum iaculis eu non diam. Nibh venenatis cras sed felis eget velit aliquet sagittis. Volutpat consequat mauris nunc congue nisi vitae. Suscipit adipiscing bibendum est ultricies. Eu scelerisque felis imperdiet proin fermentum leo vel orci. Egestas sed tempus urna et pharetra pharetra massa.</p>
+				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and was thrilled to help bring Forza Motorsport to across the finish line to the world.</p>
+				<p>I worked with a little bit of everything on the project at one point or another (except the cars).</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube player showing Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -72,8 +74,9 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Thesis</h2>
 		<div class="project-div">
+			<h5>Savannah College of Art &#38; Design | MFA in Sound Design</h5>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my MFA thesis, I practiced and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.<br><br></p>
+				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my thesis, I practiced and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.<br><br></p>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
@@ -89,8 +92,9 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Roboxing</h2>
 		<div class="project-div">
+			<h5>Husky Game Development | Audio Designer</h5>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend Tyler Eichten in collaboration with <a class="decorated-links" href="https://huskygames.com/">Husky Game Development</a> at Michigan Tech University. Originally built for an arcade cabinet, we later adapted it to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
+				<p class="remove-top-margin-text">Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend <a class="decorated-links" target="_self" href="https://www.linkedin.com/in/tyler-eichten/">Tyler Eichten</a> in collaboration with <a class="decorated-links" href="https://huskygames.com/">Husky Game Development</a> at Michigan Tech University. Originally built for an arcade cabinet, we later adapted it to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
 			<div class="project-content-left">
 				<iframe class="project-bandcamp-embed" id="roboxing-bandcamp" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp player for Roboxing OST album"seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
@@ -107,8 +111,9 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
+			<h5>Texas A&#38;M University | Sound Designer</h5>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad at Texas A&#38;M, I worked with the <a class="decorated-links" href="https://pvfa.tamu.edu/research/live-lab/">Learning Interactive Visualization Experience (LIVE) Lab,</a> an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for <a class="decorated-links" href="https://triseum.com/">Triseum LTD,</a> a close developer partner of the LIVE Lab in Bryan, TX, known for their higher-level education game series.</p>
+				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad, I worked with the <a class="decorated-links" href="https://pvfa.tamu.edu/research/live-lab/">Learning Interactive Visualization Experience (LIVE) Lab,</a> an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for <a class="decorated-links" href="https://triseum.com/">Triseum LTD,</a> a close developer partner of the LIVE Lab in Bryan, TX, known for their higher-level education game series.</p>
 			</div>
 			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
@@ -125,7 +130,8 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">The House Where They Dwell</h3>
-				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game from Half-Brain Games where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>The largest challenges we faced were from sheer audio scope, with the variety of enemies, items, and interactions (let alone split-screen). I'm most proud of the physics and the VO.</p>
+				<h5>Half-Brain Games | Audio Director</h5>
+				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>The largest challenges we faced were from sheer audio scope, with the variety of enemies, items, and interactions (let alone split-screen). I'm most proud of the physics and the VO.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell, for which I did minor video edits and all audio edits, largely with game assets. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -139,6 +145,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">Sumra</h3>
+				<h5>DASE Games | Sound Designer</h5>
 				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
@@ -152,6 +159,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
+				<h5>The Good, The Bad, &#38; The Howdy | Audio Person</h5>
 				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
