--- a/more/index.html
+++ b/more/index.html
@@ -53,8 +53,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">A repository of Reapack compliant Lua scripts used for Reaper. Mostly simple utilities.<br>If you're interested and have Reapack, go to Extensions > Reapack > Import Repositories... and paste the following:</p>
-				<a class="decorated-links" href="https://github.com/Snoopy20111/Snoopy20111-ReaScripts/raw/master/index.xml">
-					<p>https://github.com/Snoopy20111/Snoopy20111-ReaScripts/raw/master/index.xml</p>
+				<a class="decorated-links" href="https://github.com/Snoopy20111/Snoopy20111-ReaScripts/raw/master/index.xml">https://github.com/Snoopy20111/Snoopy20111-ReaScripts/raw/master/index.xml
 				</a>
 			</div>
 			<div class="project-content-right">
