Updating framework for Forza section
Added subheadings with lorem ipsum to prove out how the Forza page should look, before the videos get made.

--- a/games/index.html
+++ b/games/index.html
@@ -54,18 +54,50 @@
 			<h5>Turn 10 Studios | Sound Designer</h5>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and was thrilled to help bring Forza Motorsport to across the finish line to the world.</p>
-				<p>I worked with a little bit of everything on the project at one point or another (except the cars).</p>
+				<p>I worked with a little bit of everything on the project at one point or another (except the cars) with just about every tool in Turn 10's chest (FMOD Studio, Perforce, 3DS Max, and a wide variety of in-house tools).</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube player showing Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
+		<hr class="minor_hr">
+		<div class="project-div">
+			<div class="project-content-left">
+				<h3 class="subproject-title">Reactive Cockpit Audio</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna etiam tempor orci eu lobortis elementum nibh. Ac turpis egestas sed tempus urna et.</p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+		</div>
+		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<p>Tristique nulla aliquet enim tortor at auctor urna. Nullam vehicula ipsum a arcu. Quis varius quam quisque id diam vel quam elementum pulvinar. Neque viverra justo nec ultrices dui sapien eget. Ultricies leo integer malesuada nunc vel risus commodo. A erat nam at lectus. Nec feugiat in fermentum posuere urna. Sapien eget mi proin sed. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere lorem. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin.</p>
+				<h3 class="subproject-title">Audio Description</h3>
+				<p>Eget mauris pharetra et ultrices. Amet venenatis urna cursus eget. Morbi tristique senectus et netus et. Justo donec enim diam vulputate ut pharetra sit amet aliquam.</p>
+			</div>
+		</div>
+		<hr class="minor_hr">
+		<div class="project-div">
+			<div class="project-content-left">
+				<h3 class="subproject-title">UI &#38; Cinematics</h3>
+				<p>Risus viverra adipiscing at in tellus integer. Nullam non nisi est sit amet facilisis magna etiam. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis.</p>
+			</div>
+			<div class="project-content-right">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+		</div>
+		<hr class="minor_hr">
+		<div class="project-div">
+			<div class="project-content-left">
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			</div>
+			<div class="project-content-right">
+				<h3 class="subproject-title">Track Audio</h3>
+				<p>Sem fringilla ut morbi tincidunt augue interdum. Orci ac auctor augue mauris. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget.</p>
 			</div>
 		</div>
 	</div>
