iframe Title alt text
Made sure all iframes had sufficient and similar Title text, in case it fails to load but primarily for Screen Narration purposes.

--- a/games/index.html
+++ b/games/index.html
@@ -57,7 +57,7 @@
 				<p>I worked with a little bit of everything on the project at one point or another (except the cars) with just about every tool in Turn 10's chest (FMOD Studio, Perforce, 3DS Max, and a wide variety of in-house tools).</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube player showing Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 		<hr class="minor_hr">
@@ -67,13 +67,13 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna etiam tempor orci eu lobortis elementum nibh. Ac turpis egestas sed tempus urna et.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
 				<h3 class="subproject-title">Audio Description</h3>
@@ -87,13 +87,13 @@
 				<p>Risus viverra adipiscing at in tellus integer. Nullam non nisi est sit amet facilisis magna etiam. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube player showing video for Forza Motorsport's Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
 				<h3 class="subproject-title">Track Audio</h3>
@@ -109,10 +109,10 @@
 			<h5>Savannah College of Art &#38; Design | MFA in Sound Design</h5>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my thesis, I practiced and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.<br><br></p>
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video player, showing the video component of Logan's thesis on technical sound design. The video is unfortunately not accessible, as the captions explaining each sound and iteration are " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video, demonstration of Logan's thesis on technical sound design. This video is not accessible, relying on baked-in captions." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" frameborder="1" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+				<iframe class="project-slideshow-embed" src="https://docs.google.com/presentation/d/e/2PACX-1vQILrF1h5PX8bnlpLd31Tak1mKvQmsWZQmC_PLxb9i-gn-VCxcAwd5QL9aVWdI7G7I7GHnoD0pkeJKO/embed?start=false&loop=true&delayms=30000" title="Google Slides presentation, walking through Logan's Thesis project" frameborder="1" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 				<p>Technically, it was a challenge, as it was built with a home-grown ECS implementation before DOTS. In terms of art and theory though, it helped give structure to the approach I use professionally today.</p>
 				<a class="download-button-link" target="_self" href="https://github.com/Snoopy20111/FPSSample">See the GitHub Project</a>
 				<a class="download-button-link" target="_self" href="https://library.scad.edu/record=b1937300">Read the paper</a>
@@ -129,10 +129,10 @@
 				<p class="remove-top-margin-text">Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend <a class="decorated-links" target="_self" href="https://www.linkedin.com/in/tyler-eichten/">Tyler Eichten</a> in collaboration with <a class="decorated-links" href="https://huskygames.com/">Husky Game Development</a> at Michigan Tech University. Originally built for an arcade cabinet, we later adapted it to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
 			<div class="project-content-left">
-				<iframe class="project-bandcamp-embed" id="roboxing-bandcamp" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp player for Roboxing OST album"seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
+				<iframe class="project-bandcamp-embed" id="roboxing-bandcamp" src="https://bandcamp.com/EmbeddedPlayer/album=1743901494/size=large/bgcol=333333/linkcol=ffffff/tracklist=false/artwork=small/transparent=true/" title="Bandcamp audio player, Roboxing Original Soundtrack" seamless><a href="https://snoopy20111.bandcamp.com/album/roboxing">Roboxing by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Roboxing screen recording, demonstrating the sound and action of the game" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/l1bBcV8COYI" title="Youtube video, Roboxing screen recording demonstrating the gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>The full soundtrack is available for free from Bandcamp (embedded), and the game is available for free below.</p>
 				<a class="download-button-link" target="_self" href="https://tyler-eichten.itch.io/roboxing">Download on Itch.io</a>
 			</div>
@@ -149,7 +149,7 @@
 			</div>
 			<img class="project-content-right" id="img-arte-lumiere" src="../images/ARTe-Lumiere.jpg" alt="Screenshot from Arte Lumiere, another Triseum title" />
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Trailer for Variant: Limits, one of Triseum's successful titles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ys1ShVbkdqQ" title="Youtube video, Trailer for Variant: Limits" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>It was my first taste of professional game development, and allowed me to cut my teeth for a good cause as I distanced myself from Game Art. While no games I worked on saw release with sounds or music I produced, their influence remained and helped identify the tone and emotional shape of the projects, including Variant: Limits and Artè: Lumière.</p>
 			</div>
 		</div>
@@ -166,7 +166,7 @@
 				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>The largest challenges we faced were from sheer audio scope, with the variety of enemies, items, and interactions (let alone split-screen). I'm most proud of the physics and the VO.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video player, with the trailer for The House Where They Dwell, for which I did minor video edits and all audio edits, largely with game assets. Note that this game is not accessible, and is much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/rjwaGpkC-1E" title="YouTube video, trailer for The House Where They Dwell" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>Due to artistic choices with the final boss being a topless spider witch, the game was listed as "Adults Only," despite no other suggestions of adult content. It's jank and buggy (pun not intended) and could have done with a few more months in the oven, but the vibes are immaculate.</p>
 				<a class="download-button-link" target="_self" href="https://store.steampowered.com/app/1759460/The_House_Where_They_Dwell/">Download on Steam</a>
 				<a class="download-button-link" target="_self" href="https://halfbraingames.itch.io/the-house-where-they-dwell">Download on Itch.io</a>
@@ -181,7 +181,7 @@
 				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video player, with the trailer for Sumra, for which I did most of the audio editing. Note that this game is not accessible, and much more jank than the trailer lets on." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/Ea9yLA2ndrI" title="YouTube video, trailer for Sumra" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>You can view the project's website <a class="decorated-links" href="https://sumragame.wixsite.com/sumra">here</a> for more information.</p>
 				<a class="download-button-link" target="_self" href="https://drive.google.com/file/d/19CajfnW80dc4EeD3MGHF8TOU-q8x6ZQ-/view?usp=sharing">Download from Google Drive</a>
 			</div>
@@ -193,11 +193,11 @@
 				<h3 class="subproject-title">FooFarYall</h3>
 				<h5>The Good, The Bad, &#38; The Howdy | Audio Person</h5>
 				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
-				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
-				<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
+				<iframe title="Bandcamp audio player, Walking Gait from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
+				<iframe title="Bandcamp audio player, Hot on the Trail from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video player, with gameplay of FooFarYall. This game is not accessible, but frankly, you're not missing much." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video, FooFarYall gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. </p>
 				<a class="download-button-link" target="_self" href="https://embyrs.itch.io/foofaryall">Download on Itch.io</a>
 			</div>
