--- a/more/index.html
+++ b/more/index.html
@@ -101,7 +101,7 @@
 				<p class="remove-top-margin-text">Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real SOHO and STEREO missions. Over the years I made small additions, such as experiment requirements, custom sfx, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video, review for Solar Science mod" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-left">
 				<p>Over the 5 years I maintained and expanded the mod, Solar Science managed somewhere around almost 50k downloads across all platforms. In early 2020 I handed the project off to KSP Forums user zer0Kerbal, who has maintained the mod since.</p>
@@ -116,11 +116,11 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">Halo 3: ODST</h3>
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video, Sound Redesign for Halo 3: ODST" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
 				<h3 class="subproject-title">Halo 5 Trailer (Rescore)</h3>
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/UsHMSY8uVgQ?si=ljpiKKhqUZm3-F2h" title="Halo 5 Trailer (Rescore)." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe class="project-video-embed" src="https://www.youtube.com/embed/UsHMSY8uVgQ?si=ljpiKKhqUZm3-F2h" title="YouTube video, Music Rescore for Halo 5 Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
@@ -139,7 +139,7 @@
 				</ul>
 				<p></p>
 			</div>
-			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video player, with a screen recording of In Living Color running." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+			<iframe class="project-video-embed" src="https://www.youtube.com/embed/UDA2EpzhcHI" title="YouTube video, screen recording of In Living Color running" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			<p>The piece was intended to be projected and left running in a gallery, with the goal to create something new while maintaining a sense of the creative act in the first place: that is, structured and informed improvisation, where the little details are lost to time.</p>
 			<a class="download-button-link" target="_self" href="https://drive.google.com/file/d/1k4-Oh8gM139GGG1JEHBEauaH6G2hxfS7/view">Download the program</a>
 		</div>
