--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<p class="small-text"><a class="decorated-links" target="_self" href="https://vimeo.com/882762246?share=copy">An Audio Described version of my reel may be found here.</a></p>
 		</div>
 		<div style="padding:56.25% 0 0 0;position:relative;">
-			<iframe src="https://player.vimeo.com/video/878763365?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;" title="Sound Design Portfolio- 2023"></iframe>
+			<iframe src="https://player.vimeo.com/video/878763365?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;" title="Vimeo Player, Logan's Sound Design Portfolio- 2023"></iframe>
 		</div>
 		<script src="https://player.vimeo.com/api/player.js"></script>
 	</div>
